# RV32I-ISS

./: .gitignore  CMakeLists.txt
src/: Globals.cpp  cpu.cpp  cpu.hpp  decode.cpp  execute.cpp  main.cpp  memory.cpp
src/headers/: Globals.hpp  cpu.hpp  decode.hpp  execute.hpp  memory.hpp
tests/: test_decode.cpp  test_execute.cpp  test_memory.cpp
